--- a/MovieApp/Podfile
+++ b/MovieApp/Podfile
@@ -7,6 +7,7 @@ target 'MovieApp' do
 
   # Pods for MovieApp
   pod 'Alamofire'
+  pod 'Kingfisher'
 
   target 'MovieAppTests' do
     inherit! :search_paths
