--- a/MovieApp/Podfile
+++ b/MovieApp/Podfile
@@ -8,6 +8,7 @@ target 'MovieApp' do
   # Pods for MovieApp
   pod 'Alamofire'
   pod 'Kingfisher'
+  pod "youtube-ios-player-helper"
 
   target 'MovieAppTests' do
     inherit! :search_paths
