--- a/MovieApp/Podfile
+++ b/MovieApp/Podfile
@@ -9,6 +9,8 @@ target 'MovieApp' do
   pod 'Alamofire'
   pod 'Kingfisher'
   pod "youtube-ios-player-helper"
+  pod 'RxSwift'
+  pod 'RxCocoa'
 
   target 'MovieAppTests' do
     inherit! :search_paths
