--- a/MovieApp/Podfile
+++ b/MovieApp/Podfile
@@ -11,6 +11,7 @@ target 'MovieApp' do
   pod "youtube-ios-player-helper"
   pod 'RxSwift'
   pod 'RxCocoa'
+  pod 'RxDataSources'
 
   target 'MovieAppTests' do
     inherit! :search_paths
